Make logrus import explicit in vendor.conf
Fixes odd issues around Sirupsen/logrus vs sirupsen/logrus

--- a/vendor.conf
+++ b/vendor.conf
@@ -3,6 +3,7 @@ github.com/rancher/cluster-agent
 
 github.com/urfave/cli v1.19.1
 golang.org/x/sync/errgroup 450f422ab23cf9881c94e2db30cac0eb1b7cf80c
+github.com/sirupsen/logrus v1.0.3
 
 k8s.io/kubernetes v1.8.3 transitive=true,staging=true
 bitbucket.org/ww/goautoneg a547fc61f48d567d5b4ec6f8aee5573d8efce11d https://github.com/rancher/goautoneg.git
