--- a/vendor.conf
+++ b/vendor.conf
@@ -1,11 +1,11 @@
 # package
 github.com/rancher/cluster-agent
 
-github.com/urfave/cli v1.19.1
+github.com/urfave/cli c6af8847eb2b7b297d07c3ede98903e95e680ef9
 golang.org/x/sync/errgroup 450f422ab23cf9881c94e2db30cac0eb1b7cf80c
 github.com/sirupsen/logrus v1.0.3
 
 k8s.io/kubernetes v1.8.3 transitive=true,staging=true
 bitbucket.org/ww/goautoneg a547fc61f48d567d5b4ec6f8aee5573d8efce11d https://github.com/rancher/goautoneg.git
-github.com/rancher/types 9fdf93bf9e62bc02e1bae2a6913b9f66ee348bee
-github.com/rancher/norman 80024df69414f7cce0847ea72b0557f14edbc852
+github.com/rancher/types f8727ab4dab302dfb2b59780a392c9a4d97bf355
+github.com/rancher/norman ee148b4d18535ee26bce4b90380d91a1d9e4ac15
