Cluster events syncing

--- a/vendor.conf
+++ b/vendor.conf
@@ -7,6 +7,6 @@ github.com/sirupsen/logrus v1.0.3
 
 k8s.io/kubernetes v1.8.3 transitive=true,staging=true
 bitbucket.org/ww/goautoneg a547fc61f48d567d5b4ec6f8aee5573d8efce11d https://github.com/rancher/goautoneg.git
-github.com/rancher/types 6b16d10452a218755bbbdcd7bef819214601718a
+github.com/rancher/types 5e5ecd7530ff0de8dc3556e49b72d34dff8a26ad file:///Users/alena/go/src/github.com/rancher/types/.git
 github.com/rancher/norman ee148b4d18535ee26bce4b90380d91a1d9e4ac15
 gopkg.in/check.v1 20d25e2804050c1cd24a7eea1e7a6447dd0e74ec
