--- a/vendor.conf
+++ b/vendor.conf
@@ -8,6 +8,7 @@ gopkg.in/check.v1 20d25e2804050c1cd24a7eea1e7a6447dd0e74ec
 github.com/urfave/cli c6af8847eb2b7b297d07c3ede98903e95e680ef9
 golang.org/x/sync/errgroup 450f422ab23cf9881c94e2db30cac0eb1b7cf80c
 
-github.com/rancher/norman                   76d825608521a24007cfdb110d9b88d45c50d9c5
-github.com/rancher/types                    1c614de229b209870b9a35bce271af142c27e032
+github.com/rancher/norman                   76d825608521a24007cfdb110d9b88d45c50d9c5 
+github.com/rancher/types                    c425ec422851e9916b78a99de66a2ca6fc748cfa
 github.com/rancher/workload-controller      37120255972d5828c72b84d382c51a0d05615ec1
+github.com/rancher/helm-controller          2b4c2c1e219dbaee2f47d211425f992ceaf7139e 
